# PiezoD

./: .gitignore  AGENTS.md  LICENSE  PECantilever.m  README  README.md  cantilever.m  cantileverActuator.m  cantileverDiffusion.m  cantileverEpitaxy.m  cantileverImplantation.m  cantileverPiezoelectric.m  cantileverPoly.m  cantilever_4pm.m  cantilever_diffusion.m  cantilever_diffusion_actuator.m  cantilever_epitaxy.m  cantilever_implantation.m  cantilever_piezoelectric.m  cantilever_poly.m  postProcessTables.m  sampleCode.m  sample_code.m  sandbox.m  sandboxImplantation.m
.claude/: CLAUDE.md  settings.json
.claude/agents/: planner.md
.claude/commands/: prime.md  review.md
.claude/skills/code-review/: SKILL.md
.claude/skills/new-release/: skill.md
.claude/skills/release/: skill.md
.github/workflows/: ci.yml  publish.yml  release.yml
Docs/: MENU  contact.jemdoc  contributing.jemdoc  download.jemdoc  examples.jemdoc  export.sh  index.jemdoc  piezoD.conf  revision.jemdoc  tutorial.jemdoc  upload.sh
Docs/cgi-bin/: download.php  functions.php
Docs/html/: contact.html  contributing.html  download.html  examples.html  index.html  revision.html  tutorial.html
docs/: tutorial.md
go/src/: Cantilever.go
lookupTableGeneration/: .dockerignore  Dockerfile  Dockerfile.2024  README.md  TED_summary.md  comparison.md  docker-compose.2024.yml  docker-compose.yml  grab_flooxs_docs.ps1  open_source_tcad_process_simulators.md  patch.md  postProcessTables.m  simulation.template  simulationControl.py
lookupTableGeneration/docs/: comparison.md  diffusion_theory.md  eff_template_plan.md  flooxs_bugs.md  implementation.md  status.md
lookupTableGeneration/scripts/: compare_results.py  extract_reference.py  gen_test.sh  test_template.py  test_template_iv.py
lookupTableGeneration/simulations/: .gitignore  reference_iv_recomb.tcl  test_template_iv.tcl  validate.tcl
lookupTableGeneration/templates/: Dopant_patched.tcl  TED_PLAN.md  ion_implant.tcl  ion_implant_2024.tcl  ion_implant_5pd.tcl  ion_implant_5pd_v4.tcl  ion_implant_5pd_v5.tcl  ion_implant_5pd_v5_noVac.tcl  ion_implant_builtin.tcl  ion_implant_builtin_fermi.tcl  ion_implant_eff.tcl  ion_implant_eff_v2.tcl  ion_implant_eff_v3.tcl  ion_implant_eff_v4.tcl  ion_implant_fermi.tcl  ion_implant_iv.tcl  ion_implant_react.tcl  ion_implant_ted.tcl  ion_implant_ted_qss.tcl
lookupTables/: lookupTable.mat  simulation.template  simulationControl.py
matlab/: README.md  cantilever.m  sampleCode.m  sensorSimulation.mdl  tutorial.md
matlab/PiezoD/: cantilever.m  cantileverDiffusion.m  cantileverEpitaxy.m  cantileverImplantation.m
matlab/tests/: cantileverDiffusionTest.m  cantileverEpitaxyTest.m  cantileverImplantationTest.m  cantileverOptimizationTest.m
python/: Cantilever.py  CantileverDiffusion.py  CantileverEpitaxy.py  CantileverImplantation.py  CantileverPiezoelectric.py  LICENSE-MIT  README.md  pyproject.toml  sampleCode.py
python/PiezoD/: Cantilever.py  CantileverEpitaxy.py  CantileverPoly.py  __init__.py
python/archive/: annealing.py  brute_force.py  cantilever_divingboard.py  check_frequency.py  convex_optimization.py  crappy_performance.py  harley.py  lbfgs.py  my_cantilever.py  optimization_test.py  performance.py
python/examples/: ion_implantation.py  ion_implantation_figures.py  optimization.py  phosphorus_diffusion.py  piezoelectric_cantilever.py  poly_cantilever.py  quickstart.py  sample_code.py
python/src/piezod/: __init__.py  cantilever.py  cantilever_diffusion.py  cantilever_epitaxy.py  cantilever_implantation.py  cantilever_piezoelectric.py  cantilever_poly.py  default.mplstyle  piezod.mplstyle  piezoresistance.py  piezoresistor_from_profile.py
python/src/piezod/data/: __init__.py  export_metadata.txt  ionImplantLookupTable_tsuprem.h5
python/src/piezod/optimization/: __init__.py  constraints.py  goals.py  optimizer.py  state.py
python/tests/: __init__.py  test_cantilever.py  test_cantilever_diffusion.py  test_cantilever_epitaxy.py  test_cantilever_implantation.py  test_cantilever_piezoelectric.py  test_cantilever_poly.py  test_cantilever_port_fixes.py  test_optimization.py  test_piezoresistance.py  test_piezoresistor_from_profile.py
