[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "piezod"
version = "0.8.1"
description = "Modeling and optimization of piezoresistive and piezoelectric sensors and actuators"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
    { name = "Joseph C. Doll" }
]
keywords = ["MEMS", "piezoresistive", "piezoelectric", "cantilever", "sensor", "optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "addcopyfighandler>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "ty>=0.0.14",
]

[project.urls]
Homepage = "http://microsystems.stanford.edu/piezod"
Repository = "https://github.com/MicrosystemsLab/PiezoD"

[tool.hatch.build.targets.sdist]
exclude = [
    "archive/",
    "examples/",
]

[tool.hatch.build.targets.wheel]
sources = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "SIM", "C4", "ISC", "PIE"]
ignore = [
    "E741",   # Allow I, l, O as variable names (physics notation)
    "SIM108", # Allow if/else blocks instead of ternary (more readable with comments)
]

[tool.ruff.lint.per-file-ignores]
"cantilever_piezoelectric.py" = ["E501"]  # Lookup tables exceed line length

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "ty>=0.0.14",
]
